# SpeedNet

./: README.md  containers.tcss  httpServer.py  main.py  pyproject.toml  requirements.txt  style.css  tcpServer.py  transfer_log.txt  udpServer.py
SpeedNet/: __init__.py  file_transfer.py  net.py  ping.py  random_file.txt  scapy_network_test.py  system_log.txt  transfer_log.txt
