[tool.poetry]
name = "speednet"
version = "0.1.0"
description = "Offical Major Project GRP-18"
authors = ["Pegasus", "047pegasus@gmail.com"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.76.0"
textual-dev = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
